@@ -44,7 +44,7 @@ LogFile = "logs/bumblebee.log"
 ; 5 making bookings
 ; 9 miscellaneous notices, locale failures
 ; 10 lots of debug noise. 
-LogLevel = "8"
+LogLevel = "10"
 
 [language]
 ; Set locale to use for generating messages and dates.
