@@ -1,3 +1,9 @@
+2006-04-11 Stuart Prescott <stuart.prescott@bristol.ac.uk>
+	* added flat file logging function 
+
+2006-04-11 Stuart Prescott <stuart.prescott@bristol.ac.uk>
+	* use php-gettext to support locales 
+
 2006-02-06 Stuart Prescott <s.prescott@unimelb.edu.au>
 	* gettext-ised for i18n 
 
